<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/bg_search"
    android:orientation="vertical">

    <TextView
        android:id="@+id/txtTitle"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp"
        android:gravity="center|start"
        android:padding="5dp"
        android:text=""
        android:textColor="@color/colorPrimary"
        android:textSize="20sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/txtMsg"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginBottom="10dp"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp"
        android:layout_marginTop="10dp"
        android:gravity="center"
        android:text=""
        android:textSize="16sp" />

    <Spinner
        android:id="@+id/sp_reason"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginBottom="10dp"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp"
        android:layout_marginTop="10dp"

        android:layout_weight="1"
        android:background="@drawable/bg_search"
        android:spinnerMode="dropdown"
        android:textColor="@color/colorPrimary"
        android:textColorHint="@color/colorPrimary" />

    <com.winsant.android.views.MaterialEditText
        android:id="@+id/edtReason"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp"
        android:layout_marginTop="10dp"
        android:gravity="center|start|top"
        android:hint="@string/cancel_reason"
        android:inputType="textMultiLine|textCapSentences"
        android:maxLength="1000"
        android:maxLines="4"
        android:minLines="3"
        android:padding="10dp"
        android:text="" />

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/rose" />

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="48dp">

        <Button
            android:id="@+id/btnNo"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="0dp"
            android:layout_height="48dp"
            android:layout_weight="1"
            android:background="@color/colorWhite"
            android:text="@string/no"
            android:textColor="@color/black" />

        <View
            android:layout_width="1dp"
            android:layout_height="match_parent"
            android:background="@color/rose" />

        <Button
            android:id="@+id/btnYes"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="0dp"
            android:layout_height="48dp"
            android:layout_weight="1"
            android:background="@color/colorWhite"
            android:text="@string/yes"
            android:textColor="@color/colorPrimary" />

    </TableRow>
</LinearLayout>