<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/rose"
    android:orientation="vertical">

    <include
        android:id="@+id/main_toolbar"
        layout="@layout/toolbar" />

    <LinearLayout
        android:id="@+id/ll_top"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_below="@+id/main_toolbar"
        android:background="@color/sa_accent_transparent"
        android:orientation="horizontal"
        android:padding="2dp"
        android:visibility="gone">

        <ImageView
            android:id="@+id/imgType"
            android:layout_width="56dp"
            android:layout_height="match_parent"
            android:contentDescription="@string/app_name"
            android:padding="10dp"
            android:src="@drawable/ico_list_svg" />

        <View
            android:layout_width="2dp"
            android:layout_height="match_parent"
            android:background="@color/base" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/sort"
            android:textColor="@color/black" />

        <View
            android:layout_width="2dp"
            android:layout_height="match_parent"
            android:background="@color/base" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/filter"
            android:textColor="@color/black" />

    </LinearLayout>

    <ImageView
        android:id="@+id/imgError"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/ll_top"
        android:contentDescription="@string/app_name"
        android:visibility="gone" />

    <!--<include-->
    <!--layout="@layout/no_data_item"-->
    <!--android:layout_width="match_parent"-->
    <!--android:layout_height="match_parent"-->
    <!--android:layout_below="@+id/ll_top"-->
    <!--android:visibility="gone" />-->

    <android.support.v4.widget.NestedScrollView
        android:id="@+id/ns_main"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/ll_top">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <android.support.v7.widget.RecyclerView
                android:id="@+id/subCategoryList1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="2dp" />

            <android.support.v7.widget.RecyclerView
                android:id="@+id/subCategoryList2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="2dp" />

            <android.support.v7.widget.RecyclerView
                android:id="@+id/subCategoryProductListView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

        </LinearLayout>
    </android.support.v4.widget.NestedScrollView>

    <com.winsant.android.views.ProgressWheel
        android:id="@+id/progress_wheel"
        android:layout_width="56dp"
        android:layout_height="56dp"
        android:layout_centerInParent="true"
        android:visibility="gone"
        app:matProg_barColor="@color/colorAccent"
        app:matProg_progressIndeterminate="true" />

</RelativeLayout>